--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
 									<div class="inner">
                                      <pre style="text-align: left">
 										<code>
-@base &lt;https://arnenaesslod.github.io/&gt;.
+@base &lt;http://minsikchoi.com/arnenaesslod/&gt;.
 @prefix rdf: &lt;https://www.w3.org/TR/rdf-schema/#&gt;.
 @prefix foaf: &lt;https://xmlns.com/foaf/0.1/&gt;.
 @prefix gn: &lt;http://www.geonames.org/ontology&gt; .
